# orggraph

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  docker-compose.yml  litellm-config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
dashboard/: Home.py  README.md
dashboard/lib/: data.py  header.py  network_viz.py
dashboard/pages/: 12_About.py  1_Corpus.py  2_Personas.py  2_The_Graph.py  3_Personas.py  3_Projects.py  4_Topics.py  5_Pipeline.py  6_External_Organizations.py  6_RQ1_Structure.py  7_RQ2_Dialogue.py  8_RQ3_Retrieval.py  9_Agent_Demo.py
data/: corpus_stats.json  kg_backbone.graphml
data/rq2/judge/: activity_capacity_revisions__multi_agent__verdict.json  activity_capacity_revisions__multi_agent_tools__verdict.json  activity_capacity_revisions__single_llm__verdict.json  activity_coordination_q4_review__multi_agent__verdict.json  activity_coordination_q4_review__multi_agent_tools__verdict.json  activity_coordination_q4_review__single_llm__verdict.json  membership_rapp_ets_transition__multi_agent__verdict.json  membership_rapp_ets_transition__multi_agent_tools__verdict.json  membership_rapp_ets_transition__single_llm__verdict.json  positioning_ferc_california_inquiry__multi_agent__verdict.json  positioning_ferc_california_inquiry__multi_agent_tools__verdict.json  positioning_ferc_california_inquiry__single_llm__verdict.json  self_structuring_storage_pricing_merge__multi_agent__verdict.json  self_structuring_storage_pricing_merge__multi_agent_tools__verdict.json  self_structuring_storage_pricing_merge__single_llm__verdict.json
data/rq2/transcripts/: activity_capacity_revisions__multi_agent.jsonl  activity_capacity_revisions__multi_agent_tools.jsonl  activity_capacity_revisions__multi_agent_tools__tool_calls.jsonl  activity_capacity_revisions__single_llm.jsonl  activity_coordination_q4_review__multi_agent.jsonl  activity_coordination_q4_review__multi_agent_tools.jsonl  activity_coordination_q4_review__single_llm.jsonl  membership_rapp_ets_transition__multi_agent.jsonl  membership_rapp_ets_transition__multi_agent_tools.jsonl  membership_rapp_ets_transition__multi_agent_tools__tool_calls.jsonl  membership_rapp_ets_transition__single_llm.jsonl  positioning_ferc_california_inquiry__multi_agent.jsonl  positioning_ferc_california_inquiry__multi_agent_tools.jsonl  positioning_ferc_california_inquiry__multi_agent_tools__tool_calls.jsonl  positioning_ferc_california_inquiry__single_llm.jsonl  self_structuring_storage_pricing_merge__multi_agent.jsonl  self_structuring_storage_pricing_merge__multi_agent_tools.jsonl  self_structuring_storage_pricing_merge__multi_agent_tools__tool_calls.jsonl  self_structuring_storage_pricing_merge__single_llm.jsonl
data/rq3/: retrieval_pivot.json  task_rows.jsonl  task_summary.csv
datasets/enron/: clients_suppliers.json  employees.json
datasets/enron/processed/: cluster_labels.parquet  cluster_names.jsonl  communication_graph.gpickle  dominance_pairs.csv  dominance_pairs_v2.csv  employees_ground_truth.csv  employees_ground_truth_v2.csv  extracted_hierarchy.csv  person_enrichment.csv  person_enrichment_canonical.csv  projects.csv  rq1_results.json  tier1_seniority.csv  topics.csv  umap_embeddings.npy
docker/postgres/: init.sql
docs/: dev-setup.md  ground_truth_research.md
scripts/: 01_build_enrondata_gt.py  02_run_rq2_pilot.py  03_judge_rq2_pilot.py  04_aggregate_rq2_pilot.py  05_run_thread_continuation.py  06_rq2_qa_task_eval.py  07_compare_eval_runs.py  08_compare_eval_runs_3way.py  09_compare_team_eval.py  10_persona_qa_demo.py  restore_neo4j.sh
src/orggraph/: __init__.py  config.py
src/orggraph/agents/: agent.py  kg_context.py  (+4 more)
(+227 files in other folders)
